--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "sequelize": "^6.29.0"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "name": "backend",
   "version": "1.0.0",
